crates/test-files/fixtures/compile_errors/not_callable.fe
contract Foo:

    pub def bar():
        5()